# digg-transcriber

./: LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
docs/: HUGGINGFACE.md
src/digg_transcriber/: __init__.py  cli.py  config.py  config.yaml.example  core.py  database.py  extract.py  http_client.py  hub_cache.py  models.py  paths.py  podcast_index.py  rss.py  watcher.py  whisper.py  writers.py  xdg.py
src/digg_transcriber/plugins/: __init__.py  local_audio.py  podcast.py  video.py
tests/: test_cli.py  test_config.py  test_core.py  test_database.py  test_extract.py  test_paths.py  test_rss.py  test_watcher.py  test_writers.py
