[project]
name = "digg-transcriber"
version = "0.1.0"
description = "Universal transcription tool for video and audio"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mlx-whisper>=0.4.3",
    "faster-whisper>=1.0.0",
    "watchdog>=4.0.0",
    "pyyaml>=6.0",
    "feedparser>=6.0.0",
    "requests>=2.31.0",
]

[project.scripts]
digg-transcriber = "digg_transcriber.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/digg_transcriber"]

[tool.hatch.build.targets.wheel.force-include]
"src/digg_transcriber/config.yaml.example" = "digg_transcriber/config.yaml.example"

[tool.ruff]
line-length = 100
target-version = "py311"